--- a/en/about/index.html
+++ b/en/about/index.html
@@ -334,7 +334,7 @@
     <section class="article-content">
     
     
-    <p>Qingchen Blog
+    <p>Qingchen Blog<br>
 I am Kingbatsoft, a person who loves ctf :D
 This blog will record some ctf notes, writeups and some of my daily life. In short, let&rsquo;s make progress together!</p>
 <p>written by <em>Kinbatsoft</em> 2024.10.31</p>
