--- a/关于/index.html
+++ b/关于/index.html
@@ -373,7 +373,7 @@
     <section class="article-content">
     
     
-    <p>清尘博客
+    <p>清尘博客<br>
 我是Kingbatsoft，一个热爱ctf的人 :D
 本博客会记录一些ctf的笔记，writeup和一些我的日常，总之——一起进步吧！</p>
 <p>written by <em>Kinbatsoft</em> 2024.10.31</p>
