--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
 <article class="has-image">
     <header class="article-header">
         <div class="article-image">
-            <a href="/p/blog/">
-                <img src="/p/blog/newstart_hu4885554998042341297.png"
-                        srcset="/p/blog/newstart_hu4885554998042341297.png 800w, /p/blog/newstart_hu18370134773740819500.png 1600w"
+            <a href="/p/new_start_first_blog/">
+                <img src="/p/new_start_first_blog/newstart_hu4885554998042341297.png"
+                        srcset="/p/new_start_first_blog/newstart_hu4885554998042341297.png 800w, /p/new_start_first_blog/newstart_hu18370134773740819500.png 1600w"
                         width="800" 
                         height="413" 
                         loading="lazy"
@@ -419,7 +419,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/p/blog/">第一篇博客</a>
+            <a href="/p/new_start_first_blog/">第一篇博客</a>
         </h2>
     
         
