--- a/index.html
+++ b/index.html
@@ -407,8 +407,12 @@
     <header class="article-header">
         <div class="article-image">
             <a href="/p/build_ctf_write_up/">
-                
-                    <img src="/newstart.png" loading="lazy" alt="Featured image of post 从BuildCTF开始——CTF的旅程" />
+                <img src="/p/build_ctf_write_up/poster_hu15975998905545771491.png"
+                        srcset="/p/build_ctf_write_up/poster_hu15975998905545771491.png 800w, /p/build_ctf_write_up/poster_hu12103615696291104323.png 1600w"
+                        width="800" 
+                        height="450" 
+                        loading="lazy"
+                        alt="Featured image of post 从BuildCTF开始——CTF的旅程" />
                 
             </a>
         </div>
