--- a/en/about/index.html
+++ b/en/about/index.html
@@ -396,7 +396,7 @@ This blog will record some ctf notes, writeups and some of my daily life. In sho
             return;
         }
         var d = document, s = d.createElement('script'); s.async = true;
-        s.src = '//' + "hugo-theme-stack" + '.disqus.com/embed.js';
+        s.src = '//' + "blog-kingbatsoft-top" + '.disqus.com/embed.js';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
     })();
