--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
     <header class="article-header">
         <div class="article-image">
             <a href="/p/build_ctf_write_up/">
-                <img src="/p/build_ctf_write_up/poster_hu15975998905545771491.png"
-                        srcset="/p/build_ctf_write_up/poster_hu15975998905545771491.png 800w, /p/build_ctf_write_up/poster_hu12103615696291104323.png 1600w"
+                <img src="/p/build_ctf_write_up/poster_hu8335281075210896459.png"
+                        srcset="/p/build_ctf_write_up/poster_hu8335281075210896459.png 800w, /p/build_ctf_write_up/poster_hu4873197208586320180.png 1600w"
                         width="800" 
                         height="450" 
                         loading="lazy"
@@ -502,8 +502,8 @@
     <header class="article-header">
         <div class="article-image">
             <a href="/p/new_start_first_blog/">
-                <img src="/p/new_start_first_blog/newstart_hu4885554998042341297.png"
-                        srcset="/p/new_start_first_blog/newstart_hu4885554998042341297.png 800w, /p/new_start_first_blog/newstart_hu18370134773740819500.png 1600w"
+                <img src="/p/new_start_first_blog/newstart_hu11898780276753104099.jpg"
+                        srcset="/p/new_start_first_blog/newstart_hu11898780276753104099.jpg 800w, /p/new_start_first_blog/newstart_hu6603837009635786323.jpg 1600w"
                         width="800" 
                         height="413" 
                         loading="lazy"
