--- a/p/ctfshow_web_informationcollect_write_up/index.html
+++ b/p/ctfshow_web_informationcollect_write_up/index.html
@@ -447,11 +447,11 @@ HAHA YOU WIN
 
 -->
 <h2 id="web1">WEB1
-</h2><p><em><strong>Tip:开发注释未及时删除</strong></em></p>
+</h2><p><em><strong>开发注释未及时删除</strong></em></p>
 <p>进入环境直接使用F12打开控制台即可找出<em>flag</em></p>
 <p><code>&lt;!-- ctfshow{4fd63d59-4831-49ff-9bd6-4ee34b8e70c4} --&gt;</code></p>
 <h2 id="web2">WEB2
-</h2><p><em><strong>Tip:js前台拦截 === 无效操作</strong></em></p>
+</h2><p><em><strong>js前台拦截 === 无效操作</strong></em></p>
 <p>这道题进去以后发现F12按了没反应，右键也不行，但是可以直接通过浏览器界面打开开发者模式或者通过查看源代码绕过，<em>flag</em>就在注释里</p>
 <p><code>&lt;!-- ctfshow{5f025258-4778-4833-95ff-1941f3ae0f6e} --&gt;</code></p>
 <h2 id="web3">WEB3
@@ -493,7 +493,7 @@ HAHA YOU WIN
 </h2><p><em><strong>cookie 只是一块饼干，不能存放任何隐私数据</strong></em></p>
 <p>根据提示直接抓包获取cookie内存储的的<em>flag</em></p>
 <h2 id="web11">WEB11
-</h2><p>*<strong>域名其实也可以隐藏信息，比如flag.ctfshow.com 就隐藏了一条信息</strong></p>
+</h2><p><em><strong>域名其实也可以隐藏信息，比如flag.ctfshow.com 就隐藏了一条信息</strong></em></p>
 <p>用好几个网站查询都不行，不知道是什么问题，可能域名有问题，访问不了了，不过大概是考nslookup这种域名解析的知识</p>
 <h2 id="web12">WEB12
 </h2><p><em><strong>有时候网站上的公开信息，就是管理员常用密码</strong></em></p>
