--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/p/ctfshow_web_command_write_up_2/">CTF_show Web 命令执行writeup P2</a>
+            <a href="/p/ctfshow_web_command_write_up_2/">CTF_show Web 命令执行writeup P2 WEB41-WEB50</a>
         </h2>
     
         
