--- a/p/ctfshow_web_informationcollect_write_up/index.html
+++ b/p/ctfshow_web_informationcollect_write_up/index.html
@@ -646,7 +646,7 @@ HAHA YOU WIN
         
 
         <div class="article-details">
-            <h2 class="article-title">CTF_show Web 命令执行writeup P2</h2>
+            <h2 class="article-title">CTF_show Web 命令执行writeup P2 WEB41-WEB50</h2>
         </div>
     </a>
 </article>
