--- a/工具网站/index.html
+++ b/工具网站/index.html
@@ -458,7 +458,7 @@
                     <h2 class="article-title">五子棋</h2>
                     <footer class="article-time">
                         
-                            chatgpt写的五子棋，enjoy~
+                            五子棋 powered by cursor，enjoy~
                         
                     </footer>
                 </div>
