--- a/p/fivechessv1/index.html
+++ b/p/fivechessv1/index.html
@@ -382,7 +382,7 @@
   }
 </style>
 <div class="gomoku-container">
-  <iframe src="./index.html"></iframe>
+  <iframe src="./chess.html"></iframe>
 </div>
 </section>
 
