--- a/p/fivechessv2/chess.html
+++ b/p/fivechessv2/chess.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>五子棋（集成示例）</title>
+  <title>五子棋</title>
   <style>
     body {
       text-align: center;
@@ -48,7 +48,7 @@
   </style>
 </head>
 <body>
-  <h1>五子棋（集成示例）</h1>
+  <h1>五子棋</h1>
 
   <!-- 难度选择下拉框 -->
   <div>
