--- a/p/deepmiao/deepmiao.html
+++ b/p/deepmiao/deepmiao.html
@@ -456,7 +456,7 @@
                     
                     // 链接和图片喵
                     '[点击查看更多喵](https://http.cat/)',
-                    '![好康的图片](https://api.btstu.cn/sjbz/api.php?lx=dongman&format=images)',
+                    '[(燃尽了)里面....好康的...嘿嘿..网站...喵~](https://www.gov.cn)',
                     
                     // 表格喵
                     '| 喵种 | 描述 |\n|------|------|\n| 短毛喵 | 喵喵 |\n| 长毛喵 | 喵呜喵呜 |\n| 胖喵 | 喵嗷嗷 |',
