--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/p/python_data_analysis/">Python数据分析快速参考指南</a>
+            <a href="/p/python_data_analysis/">丁薇🉐Python数据分析课程小册</a>
         </h2>
     
         
